<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reservatiesysteem.lotte.reservatiesysteem.activity.StartActivity"
    android:background="@drawable/bowling">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#a7a7a7"
        android:layout_marginTop="102dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <AutoCompleteTextView
            android:id="@+id/searchCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gemeente"
            android:layout_toRightOf="@+id/btnLocation"
            android:layout_marginLeft="20dp"
            />

        <ImageButton
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchCity"
            android:src="@drawable/ic_calendar_icon"
            android:background="#a7a7a7"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/searchCity"
            android:layout_toRightOf="@id/btnDate"
            android:layout_marginLeft="20dp"
            android:text="Date"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/btnTime" />

        <ImageButton
            android:id="@+id/btnTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDate"
            android:src="@drawable/ic_clock_icon"
            android:background="#a7a7a7"
            android:layout_marginTop="25dp" />

        <ImageView
            android:id="@+id/imgPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_icon"
            android:layout_below="@+id/btnTime"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/numberPersons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="Aantal personen"
            android:inputType="numberSigned"
            android:layout_toRightOf="@+id/imgPerson"
            android:layout_alignBottom="@+id/imgPerson"
            />

        <ImageButton
            android:id="@+id/btnLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_icon"
            android:background="#a7a7a7"
            android:layout_above="@+id/btnDate"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="Time"
            android:textSize="18dp"
            android:layout_alignTop="@+id/btnTime"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/btnTime"
            android:layout_above="@+id/imgPerson" />

        <Button
            android:id="@+id/btnReserveer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mint_green"
            android:text="@string/search"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/imgPerson"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblError"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:layout_below="@+id/btnReserveer"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
