...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/lytHeader">

            <Button
                android:id="@+id/btnFotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/mint_green"
                android:text="Foto's"
                />
...
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutbutttons"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/viewFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
...
            android:layout_height="match_parent"
            android:layout_below="@+id/layoutbutttons3"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/lvReview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
...
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnReserveren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutImage3"
            android:background="@drawable/nav_button_styles"
            android:text="Reserveren"
            />
...
